--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-
     <nav class="main-nav-hide">
       <div id="transition-container"></div>
       <ul id="myMenu">
@@ -48,8 +47,6 @@
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
     </nav> <!-- .main-nav-hide / hidden menu -->
-
-
 
     <div class="social-main">
       <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
@@ -81,7 +78,7 @@
         </a>
       </div>
 
-    </div> <!-- end of landing page -->
+    </div> <!-- .main-landing-page -->
 
     <div class="section about-me flex align-center">
        <div class="wrapper-container flex align-center justify-center">
@@ -126,23 +123,22 @@
           </section>
 
         </div>
-      </div> <!-- horizontal ux-slide-01 -->
+      </div> <!-- .ux-slide-01 -->
 
       <div class="horizontal ux-slide-02">
-        <div class="wrapper-container">
+        <div class="wrapper-container flex justify-center align-center ">
           <div class="ux-image">
             <img src="img/onBoard-large.png">
           </div>
-          <article class="ux-slide01-text">
-            <h1>USER INTERFACE</h1>
+          <article class="ux-slide02-text">
+            <h1>CASE STUDY / Birdy</h1>
             <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
-            <button class="btn ux-next-slide01-button">next</button>
           </article> 
         </div>
       </div> <!-- horizontal ux-slide-01 -->
 
       <div class="horizontal ux-slide-03">
-        <div class="wrapper-container fp-auto-height-responsive">
+        <div class="wrapper-container">
           <div class="placeholder"></div>
           <article class="ux-slide02-text">
             <h1>USER INTERFACE</h1>
