--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
   <script src="js/vendor/fullpage.scrollHorizontally.min.js"></script>
   <script src="js/vendor/scrolloverflow.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
+<!-- -->  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
   <!-- <script src="data/data.js"></script> -->
   <script src="js/vendor/bodymovin.js"></script>
